# agent-memory-v2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: README.md  stage1_advice_source_anchor_v85_diag.json  stage1_advice_turn_window_v84_diag.json  stage1_aggregation_contract_v123_qwen36_no_think_build4k_cached.json  stage1_anchor48_operation_context_organizer_v301_query_restore_seeded_qwen36_no_think_build4k_cached.json  stage1_anchor_linked_operation_source_expansion_v304_query_restore_seeded_qwen36_no_think_build4k_cached.json  stage1_anchor_preserving_operation_context_organizer_v300_query_restore_seeded_qwen36_no_think_build4k_cached.json  stage1_answer_contract_compact_v335_seeded_qwen36_no_think_build4k_cached.json  stage1_answer_contract_slot_guard_v336_seeded_qwen36_no_think_build4k_cached.json  stage1_answer_format_guard_v35_cached.json  stage1_answer_output_cap4096_v232_seeded_qwen36_no_think_build4k_cached.json  stage1_answer_slot_checklist_v149_qwen36_no_think_build4k_cached.json  stage1_answer_support_audit_v256_seeded_qwen36_no_think_build4k_cached.json  stage1_append_fact_source_alignment_v242_seeded_qwen36_no_think_build4k_cached.json  stage1_assistant_query_miss_tail_v348_compile_scan.json  stage1_assistant_query_miss_tail_v348_seeded_qwen36_no_think_build4k_cached.json  stage1_budget_aware_selected_context_v137_qwen36_no_think_build4k_cached.json  stage1_budgeted_selected_context_v96_cached.json  stage1_build4k_r20_v74_cached.json  stage1_build_memory_cached.json  stage1_build_operation_ledger_v257_seeded_qwen36_no_think_build4k_cached.json  (+386 more)
(+6345 files in other folders)
