[project]
name = "agent-memory"
version = "0.1.0"
description = "Clean, ablation-friendly Agent-Memory skeleton."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
